--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,14 +20,22 @@ android {
 }
 
 dependencies {
+
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
     compile 'com.android.support:appcompat-v7:25.2.0'
     compile 'com.android.support:recyclerview-v7:25.2.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:gridlayout-v7:25.2.0'
     compile 'com.android.support:design:25.2.0'
     testCompile 'junit:junit:4.12'
+
+    // Chat için gerekli bağımlılık
+    compile('io.socket:socket.io-client:0.6.2') {
+        exclude group: 'org.json', module: 'json'
+    }
+    compile 'com.android.support:recyclerview-v7:25.4.0'
 }
