--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,9 @@ android {
 
 dependencies {
 
+    compile 'com.google.firebase:firebase-storage:11.0.4'
+    compile 'com.google.firebase:firebase-auth:11.0.4'
+    compile 'com.google.firebase:firebase-database:11.0.4'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -34,9 +37,19 @@ dependencies {
     compile 'com.android.support:design:25.2.0'
     testCompile 'junit:junit:4.12'
 
+    //Circle image için
+    compile 'de.hdodenhof:circleimageview:2.2.0'
+
+    //Picasso
+    compile 'com.squareup.picasso:picasso:2.5.2'
+
     // Chat için gerekli bağımlılık
     compile('io.socket:socket.io-client:0.6.2') {
         exclude group: 'org.json', module: 'json'
     }
     compile 'com.android.support:recyclerview-v7:25.4.0'
 }
+
+
+
+apply plugin: 'com.google.gms.google-services'
