--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,33 @@ android {
 
 
 dependencies {
+
+    //Ana tasarım için gerekli tab- menu
+    implementation 'com.google.firebase:firebase-database:11.0.4'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:26.1.0'
     compile 'com.android.support:design:26.1.0'
+
+    //Circle image için
+    compile 'de.hdodenhof:circleimageview:2.2.0'
+
+    //Picasso
+    compile 'com.squareup.picasso:picasso:2.5.2'
+
+
+
+
+    //Firebase
+    compile 'com.google.firebase:firebase-storage:11.0.4'
+    compile 'com.google.firebase:firebase-auth:11.0.4'
+    compile 'com.google.firebase:firebase-database:11.0.4'
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+
+
 }
+
+
+apply plugin: 'com.google.gms.google-services'
