Favoriler Kısmı Düzenlendi
Artık silmeler ve eklemeler anlık olarak gözükmektedir. Bir sonraki paylaşımımda  ileri geri butonlarını widget düzenlemesi yapacağım

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,10 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.1.0'
     compile 'com.android.support:design:26.1.0'
 
+    //pulltoreflesh
+    compile 'com.github.chrisbanes.actionbarpulltorefresh:library:+'
+    compile 'com.android.support:support-v4:26.1.0'
+
     //Circle image için
     compile 'de.hdodenhof:circleimageview:2.2.0'
 
