--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
             android:enabled="true"
             android:exported="false"/>
 
+        <activity android:name=".NotConnectionActivity" />
         <receiver
             android:name=".ConnectivityReceiver"
             android:enabled="true">
