Uygulamanın görünümü portrait olarak ayarlandı.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity" >
+        <activity android:name=".MainActivity"
+            android:screenOrientation="portrait"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -32,7 +34,9 @@
             android:enabled="true"
             android:exported="false"/>
 
-        <activity android:name=".NotConnectionActivity" />
+        <activity android:name=".NotConnectionActivity"
+            android:screenOrientation="portrait"
+            />
         <receiver
             android:name=".ConnectivityReceiver"
             android:enabled="true">
